Paxtools 5.2.1-SNAPSHOT can now build with JDK 8, 11,...19 (requires additional _JAVA_OPTIONS with add-opens directives); min source/target compatibility: java 8.